syntax = "proto3";
package proto;

service System {
  rpc Join(SystemRequestJoin) returns (SystemResponseJoin);
  rpc Servers(SystemRequestServers) returns (SystemResponseServers);
}

message SystemRequestJoin {
  bytes id = 1;
  bytes addr = 2;
}

message SystemResponseJoin {
  bytes status = 1;
}

message SystemRequestServers {}

message SystemResponseServers {
  repeated ServerInfo infos = 1;
}


service KVS {
  rpc Read(KVSRequestRead) returns (KVSResponseRead);
  rpc Write(KVSRequestWrite) returns (KVSResponseWrite);

  rpc Ping(KVSRequestPing) returns (KVSResponsePing);
}
  
message KVSRequestRead {
  bytes key = 1;
}
message KVSResponseRead {
  bytes value = 1;
}

message KVSRequestWrite {
  bytes key = 1; 
  bytes value = 2;
}
message KVSResponseWrite {}

message KVSRequestPing {}
message KVSResponsePing {}

message ServerInfo {
  int32 suffrage = 1;
  string id = 2;
  string address = 3;
}